fix overflow, use grid instead of flex

--- a/app/assets/stylesheets/spree/frontend/components/pages/_all.scss
+++ b/app/assets/stylesheets/spree/frontend/components/pages/_all.scss
@@ -42,6 +42,13 @@ html {
   flex-grow: 0;
 }
 
+section:before {
+  content: "";
+  display: block;
+  height: 100px;
+  margin-top: -100px;
+}
+
 .content_richtext_image_left img,
 .content_richtext_image_right img,
 .content_three_squares img,
@@ -142,16 +149,36 @@ html {
     margin: 0 auto 16px auto;
     width: fit-content;
   }
-  .flexbox {
+  .container {
     column-gap: 2rem;
-    display: flex;
-    row-gap: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
   .card {
-    flex-basis: 100%;
-    img {
-      aspect-ratio: 16 / 9;
-      object-fit: cover;
+    a {
+      display: block;
+      width: 100%;
+      img {
+        aspect-ratio: 16 / 9;
+        object-fit: cover;
+        width: 100%;
+      }
+      .info {
+        text-align: center;
+        h2 {
+          font-size: 1.4rem;
+          font-weight: 500;
+          margin: 0 0 1rem;
+          width: 100%;
+          word-break: break-word;
+        }
+        p {
+          color: #3c76f0;
+          font-size: 1.4rem;
+          font-weight: 500;
+          text-align: center;
+        }
+      }
     }
   }
 }
